--- a/Style.css
+++ b/Style.css
@@ -32,3 +32,54 @@ text-align: left;
 font-size: 3em;
 text-shadow: 2px 4px 10px darkturquoise;
 }
+@media only screen and (max-width: 768px) {
+/* for mobile phones : */
+.photo {text-align: center}
+.summary {
+font-family: Sans-serif;
+color: black;
+text-align: justify;
+line-height: 1.6;
+}
+h1 {
+text-align: center;
+font-family: Sans-serif;
+color: darkturquoise;
+}
+bio {
+font-family: Sans-serif; 
+color: black 
+text-align: justify;
+line-height: 1.6;
+}
+h2 {
+color: salmon;
+font-family: Sans-serif;
+text-align: center;
+}
+}
+@media for print {
+/* for print : */
+.photo {text-align: center}
+.summary {
+font-family: Sans-serif;
+color: black;
+text-align: justify;
+line-height: 1.6;
+}
+h1 {
+text-align: center;
+font-family: Sans-serif;
+color: darkturquoise;
+}
+bio {
+font-family: Sans-serif; 
+color: black 
+text-align: justify;
+line-height: 1.6;
+}
+h2 {
+color: salmon;
+font-family: Sans-serif;
+text-align: center;
+}
